--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1279,7 +1279,7 @@ audio {
 	text-shadow: 2px 2px 2px #FFF;
 	display: none;
 	font-weight: bold;
-	duration: 10s;
+	transition-duration: 10s;
 }
 
 .btn-primary {
